--- a/tengu-tensor/Cargo.toml
+++ b/tengu-tensor/Cargo.toml
@@ -17,4 +17,5 @@ indoc = "2.0.5"
 
 [dev-dependencies]
 pretty_assertions = "1.4.1"
+regex = "1.11.0"
 tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
