--- a/tengu-backend-wgpu/Cargo.toml
+++ b/tengu-backend-wgpu/Cargo.toml
@@ -1,21 +1,20 @@
 [package]
-name = "tengu-tensor"
+name = "tengu-backend-wgpu"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+tengu-wgpu = { path = "../tengu-wgpu" }
 tengu-backend = { path = "../tengu-backend" }
-tengu-backend-wgpu = { path = "../tengu-backend-wgpu" }
 thiserror = { workspace = true }
 anyhow = { workspace = true }
-random-string = "1.1.0"
-indoc = "2.0.5"
+wgpu = { workspace = true }
+bytemuck = { workspace = true }
+flume = "0.11.0"
 itertools = "0.13.0"
-futures = "0.3.31"
-as-any = "0.3.1"
-num = "0.4.3"
+indoc = "2.0.5"
 
 [dev-dependencies]
 pretty_assertions = "1.4.1"
-pollster = { version = "0.3.0", features = ["macro"] }
+regex = "1.11.0"
 tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
