Proppage compute errors all the way to the user-level compute call

--- a/tengu-wgpu/Cargo.toml
+++ b/tengu-wgpu/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 wgpu = { workspace = true }
+anyhow = { workspace = true }
 thiserror = "1.0.63"
 bon = "2.3.0"
 bytemuck = "1.18.0"
