--- a/tengu-tensor/Cargo.toml
+++ b/tengu-tensor/Cargo.toml
@@ -14,6 +14,8 @@ itertools = "0.13.0"
 futures = "0.3.31"
 as-any = "0.3.1"
 num = "0.4.3"
+rand = "0.8.5"
+rand_distr = "0.4.3"
 
 [dev-dependencies]
 pretty_assertions = "1.4.1"
