--- a/tengu-backend-wgpu/Cargo.toml
+++ b/tengu-backend-wgpu/Cargo.toml
@@ -10,6 +10,7 @@ thiserror = { workspace = true }
 anyhow = { workspace = true }
 wgpu = { workspace = true }
 bytemuck = { workspace = true }
+tracing = { workspace = true }
 flume = "0.11.0"
 itertools = "0.13.0"
 indoc = "2.0.5"
