--- a/tengu-backend-wgpu/Cargo.toml
+++ b/tengu-backend-wgpu/Cargo.toml
@@ -11,9 +11,10 @@ anyhow = { workspace = true }
 wgpu = { workspace = true }
 bytemuck = { workspace = true }
 tracing = { workspace = true }
-flume = "0.11.0"
+flume = { workspace = true }
 itertools = "0.13.0"
 indoc = "2.0.5"
+async-trait = "0.1.83"
 
 [dev-dependencies]
 pretty_assertions = "1.4.1"
