--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["tengu-wgpu", "tengu-tensor", "tengu-backend", "tengu-backend-wgpu"]
+members = ["tengu-wgpu", "tengu-graph", "tengu-backend", "tengu-backend-wgpu"]
 resolver = "2"
 
 [workspace.dependencies]
