--- a/tengu-graph/Cargo.toml
+++ b/tengu-graph/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2021"
 tengu-backend = { path = "../tengu-backend" }
 tengu-backend-wgpu = { path = "../tengu-backend-wgpu" }
 tengu-tensor-traits = { path = "../tengu-tensor-traits" }
+tengu-tensor = { path = "../tengu-tensor" }
 thiserror = { workspace = true }
 anyhow = { workspace = true }
 tracing = { workspace = true }
-flume = { workspace = true }
 async-trait = { workspace = true }
 random-string = "1.1.0"
 indoc = "2.0.5"
