--- a/tengu-tensor/Cargo.toml
+++ b/tengu-tensor/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 tengu-backend = { path = "../tengu-backend" }
-tengu-tensor-traits = { path = "../tengu-tensor-traits" }
+tengu-backend-tensor = { path = "../tengu-backend-tensor" }
 flume = { workspace = true }
 thiserror = { workspace = true }
 anyhow = { workspace = true }
