Refactor CPU processor representation to rely on dyn Any

--- a/tengu-backend-cpu/Cargo.toml
+++ b/tengu-backend-cpu/Cargo.toml
@@ -9,4 +9,6 @@ tengu-backend = { path = "../tengu-backend" }
 tengu-backend-tensor = { path = "../tengu-backend-tensor" }
 thiserror = { workspace = true }
 anyhow = { workspace = true }
-castaway = "0.2.3"
+
+[dev-dependencies]
+pretty_assertions = "1.4.1"
