--- a/tengu-backend-cpu/Cargo.toml
+++ b/tengu-backend-cpu/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 tengu-wgpu = { path = "../tengu-wgpu" }
 tengu-backend = { path = "../tengu-backend" }
 tengu-backend-tensor = { path = "../tengu-backend-tensor" }
+tengu-utils = { path = "../tengu-utils" }
 thiserror = { workspace = true }
 anyhow = { workspace = true }
 
