--- a/tengu-graph/Cargo.toml
+++ b/tengu-graph/Cargo.toml
@@ -9,8 +9,8 @@ license = "MIT OR Apache-2.0"
 tengu-backend = { path = "../tengu-backend" }
 tengu-backend-wgpu = { path = "../tengu-backend-wgpu" }
 tengu-backend-cpu = { path = "../tengu-backend-cpu" }
-tengu-backend-tensor = { path = "../tengu-backend-tensor" }
 tengu-graph-tensor = { path = "../tengu-graph-tensor" }
+tengu-utils = { path = "../tengu-utils" }
 thiserror = { workspace = true }
 anyhow = { workspace = true }
 tracing = { workspace = true }
