--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     "tengu-graph-tensor",
     "tengu-wgpu",
     "tengu-utils",
+    "tengu-tensor-cpu",
 ]
 resolver = "2"
 
@@ -19,3 +20,4 @@ anyhow = "1.0.89"
 tracing = "0.1.40"
 async-trait = "0.1.83"
 flume = "0.11.0"
+pretty_assertions = "1.4.1"
