--- a/tengu-tensor/Cargo.toml
+++ b/tengu-tensor/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+tengu-utils = { path = "../tengu-utils" }
 bytemuck = { workspace = true }
 anyhow = { workspace = true }
+itertools = "0.13.0"
